--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.51.11",
     "@types/moment": "^2.13.0",
     "formik": "^2.4.6",
     "moment": "^2.30.1",
