--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@tanstack/react-query": "^5.51.11",
     "@types/moment": "^2.13.0",
+    "@types/react-paginate": "^7.1.4",
     "formik": "^2.4.6",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^6.24.1",
     "yup": "^1.4.0"
   },
